Setup Sanity Zod Types

--- a/packages/sanity-zod-types/package.json
+++ b/packages/sanity-zod-types/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "content-models",
+  "name": "sanity-zod-types",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "dependencies": {
     "sanity": "^3.11.5",
     "typescript": "latest",
-    "zod": "^3.21.4",
-    "sanity-zod-types": "*"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@sanity/types": "^3.11.5"
