Setup first Sanity Query Setup prettier, VSCode settings, ran formatter

--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "astro": "^2.5.6",
+    "astro-sanity": "^1.1.7"
   }
 }
