--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -11,8 +11,10 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
-    "astro": "^2.5.6",
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.6.1",
     "astro-portabletext": "^0.9.1",
-    "astro-sanity": "^1.1.7"
+    "astro-sanity": "^1.1.7",
+    "tailwindcss": "^3.3.2"
   }
 }
