--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -15,6 +15,11 @@
     "astro": "^2.6.1",
     "astro-portabletext": "^0.9.1",
     "astro-sanity": "^1.1.7",
-    "tailwindcss": "^3.3.2"
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.241.0",
+    "tailwind-merge": "^1.13.0",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
