--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -11,13 +11,18 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
+    "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "astro": "^2.6.1",
     "astro-portabletext": "^0.9.1",
     "astro-sanity": "^1.1.7",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.241.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5"
