--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -26,5 +26,8 @@
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
