--- a/apps/site-sanity/package.json
+++ b/apps/site-sanity/package.json
@@ -16,6 +16,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/code-input": "^4.1.1",
     "@sanity/document-internationalization": "^2.0.0",
     "@sanity/vision": "^3.11.5",
     "content-models": "*",
