--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -23,6 +23,8 @@
     "lucide-react": "^0.241.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-refractor": "^2.1.7",
+    "refractor": "^4.8.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5"
