--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -30,6 +30,7 @@
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/refractor": "^3.0.2"
   }
 }
