--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@types/refractor": "^3.0.2"
+    "@types/refractor": "^3.0.2",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
