Fixed build issues. Added pagefind commands to Astro package.json

--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && npx -y pagefind",
+    "build:search": "npm run build && cp -fR dist/_pagefind public/",
     "preview": "astro preview",
     "astro": "astro",
     "clean": "rm -rf .turbo && rm -rf node_modules"
