--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
     "@floating-ui/dom": "^1.3.0",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.6.1",
@@ -22,6 +23,7 @@
     "astro-sanity": "^1.1.7",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.241.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
