--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.6.1",
+    "astro-embed": "^0.2.1",
     "astro-portabletext": "^0.9.1",
     "astro-sanity": "^1.1.7",
     "class-variance-authority": "^0.6.0",
