--- a/apps/site-marketing/package.json
+++ b/apps/site-marketing/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^3.1.3",
     "@floating-ui/dom": "^1.3.0",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.6.1",
@@ -25,6 +26,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "flowbite": "^1.6.6",
     "lucide-react": "^0.241.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
