Fixed some dark mode issues with prose and popovers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "editor.tabSize": 2,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "files.exclude": {
-    "apps/site-astro": true
-  }
+  "editor.formatOnSave": true
+  // "files.exclude": {
+  //   "apps/site-astro": true
+  // }
 }
