--- a/apps/site-sanity/package.json
+++ b/apps/site-sanity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "space-madness",
+  "name": "site-space-madness-sanity",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
