Update astro.yml - Set SANITY_STUDIO_PROJECT_ID

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -25,6 +25,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
+  SANITY_STUDIO_PROJECT_ID: ${{ vars.SANITY_STUDIO_PROJECT_ID }}
   BUILD_PATH: "." # default value when not using subfolders
   # BUILD_PATH: subfolder
 
