--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -25,6 +25,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
+  SANITY_STUDIO_PROJECT_ID: ${{ vars.SANITY_STUDIO_PROJECT_ID }}
   BUILD_PATH: "." # default value when not using subfolders
   # BUILD_PATH: subfolder
 
@@ -66,8 +67,6 @@ jobs:
         working-directory: ${{ env.BUILD_PATH }}
       - name: Build with Astro
         run: |
-          echo ${{env.SANITY_STUDIO_PROJECT_ID}}
-          echo process.env.SANITY_STUDIO_PROJECT_ID
           ${{ steps.detect-package-manager.outputs.runner }} turbo build --filter=site-space-madness-astro
         working-directory: ${{ env.BUILD_PATH }}
       - name: Upload artifact
