--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "prettier": "^3.0.0",
     "prettier-plugin-astro": "^0.11.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "turbo": "^1.10.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "turbo": "^1.10.7"
+  },
+  "overrides": {
+    "@mdx-js/react": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   },
   "packageManager": "npm@9.6.5",
   "workspaces": [
