--- a/apps/site-astro/package.json
+++ b/apps/site-astro/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build && npm run pagefind -- --source ./dist --verbose",
-    "build:search": "npm run build && cp -fR dist/_pagefind public/",
+    "build": "astro build && npm run pagefind -- --verbose",
+    "build:search": "npm run build && cp -fR dist/pagefind public/",
     "format": "prettier --write \"**/*.{ts,tsx,md,astro}\"",
     "preview": "astro preview",
     "pagefind": "pagefind",
@@ -27,7 +27,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.259.0",
-    "pagefind": "^0.12.0",
+    "pagefind": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "shiki": "^0.14.2",
